nota en embarque

--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -259,7 +259,7 @@
                             Categoría o partida arancelaria
                         </span>
                         <span class="m-list-settings__item-control">
-                          {{ datoEmbarque.nota }}
+                          {{ datoEmbarque.nota ? datoEmbarque.nota : '-' }}
                          </span>
                     </div>
                 </div>
