--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -24,7 +24,7 @@
     </tr>
     <tr *ngFor="let articulo of data">
         <td>
-            <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.consolidado">{{articulo.codigoConsolidado}}</i>
+            <i class="fa fa-dropbox" style="font-size: 10px" *ngIf="articulo.codigo_consolidado">{{articulo.codigo_consolidado}}</i>
             <a style="cursor: pointer;"  *ngIf="articulo.enviar" title="Instrucciones de Embarque"  (click)="modalEmbarque(embarqueModal,articulo )"> <i class="fa fa-plane" style="font-size: 10px"></i></a>
            
         </td>
@@ -61,9 +61,9 @@
             {{articulo.precio}}
         </td>
         <td>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Declaración de Valores" style="color: white; background-color: #4f9e35" target="_blank" *ngIf="articulo.factura_url && articulo.facDV && !articulo.consolidadoFactura">Si</a>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Factura" style="color: white" target="_blank" *ngIf="articulo.factura_url && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
-            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Factura" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_url && articulo.consolidadoFactura">Si</a>            
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Declaración de Valores" style="color: white; background-color: #4f9e35" target="_blank" *ngIf="articulo.factura_url && articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Factura" style="color: white" target="_blank" *ngIf="articulo.factura_url && !articulo.fac_d_v && !articulo.consolidado_factura">Si</a>
+            <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="articulo.factura_url | replice" title="Factura" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_url && articulo.consolidado_factura">Si</a>            
             <a  class="m-badge m-badge--info m-badge--wide"  title="Factura" style="color: white; background-color: #1e1111" *ngIf="!articulo.factura_url">No</a>            
 
         </td>
