--- a/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/facturacion-datatable/facturacion-datatable.component.html
@@ -5,7 +5,7 @@
         <th>Facturado</th>
         <th>Cargo</th>
         <th>Formas de Pago</th>
-        <th>Acciones</th>
+        <th>Detalles</th>
     </tr>
     </thead>
     <tbody>
