--- a/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/ruta-nacional-datatable/ruta-nacional-datatable.component.html
@@ -7,7 +7,7 @@
         <th># Guía</th>
         <th>Empresa</th>
         <th>Cargo</th>
-        <th>Acciones</th>
+        <th>Detalles</th>
     </tr>
     </thead>
     <tbody>
