--- a/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-transito-datatable/en-transito-datatable.component.html
@@ -3,7 +3,7 @@
     <tr>
         <th>Fecha Embarque</th>
         <th>Guía</th>
-        <th>Acciones</th>
+        <th>Detalles</th>
     </tr>
     </thead>
     <tbody>
