--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -338,19 +338,20 @@
                         <th>
                             Track Remitente
                         </th>
+                        <th>Descripción </th>
                         <th>
-                            Peso(Lb)
+                            Piezas
                         </th>
                         <th>
                             Dimensiones(In)
                         </th>
                         <th>
-                            Costo(USD)
+                            Peso(Lb)
                         </th>
+                       
                         <th>
-                            Piezas
-                        </th>
-                        <th>Descripción </th>
+                            Costo(USD)
+                        </th>     
                         
                     </tr>
                     </thead>
@@ -364,20 +365,25 @@
                          <td>
                             {{ articulo.tracking }}
                         </td>
+                        <td>{{ articulo.descripcion }}</td>
                         <td>
-                            {{ articulo.peso | number:'1.2-2' }}
+                            {{ articulo.piezas }}
                         </td>
                         <td>
                             {{ articulo.largo }}x{{articulo.ancho}}x{{articulo.alto}}
                         </td>
                         <td>
+                            {{ articulo.peso | number:'1.2-2' }}
+                        </td>
+                        
+                        <td>
                             {{ articulo.precio }}
                         </td>
-                        <td>
-                            {{ articulo.piezas }}
-                        </td>
-                        <td>{{ articulo.descripcion }}</td>
-                       
+                    </tr>
+                    <tr>
+                        <td colspan="5" style="text-align: center;"><h4>Total</h4></td>
+                        <td>{{ totalPeso }}</td>
+                        <td>{{ totalPrecio }}</td>
                     </tr>
                     </tbody>
                 </table>
@@ -401,7 +407,12 @@
                       #embarcarForm="ngForm" (submit)="onSubmitEmbarcar(embarcarForm.value)">
                     <div class="m-portlet__body">
                      
-                    <div class="form-group m-form__group row">
+                        <div class="row text-center" style="margin: 5px; padding-top:10px !important;">
+                            <div class="col-lg-12">
+                                <h4>SOLO PARA MIGRANTES.</h4>
+                            </div>
+                            </div>
+                            <div class="form-group m-form__group row" style="padding-top:10px !important;">
                             <label class="col-lg-3 col-form-label">
                                 Remitente:
                             </label>
