--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -458,7 +458,7 @@
                                 ></app-auto-complete>
                             </div>
                         </div>
-                        <div class="form-group m-form__group row">
+                        <div class="form-group m-form__group row" *ngIf="!estaConsolidado">
                         <label class="col-lg-3 col-form-label">
                             Descripción:
                          </label>
