--- a/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/embarcado-datatable/embarcado-datatable.component.html
@@ -265,7 +265,7 @@
                     </div>
                     <div class="m-list-settings__item" *ngIf="datoEmbarque.descripcion_embarque">
                         <span class="m-list-settings__item-label">
-                            Nueva Descripción
+                          Descripción Recomendada
                         </span>
                         <span class="m-list-settings__item-control">
                           {{ datoEmbarque.descripcion_embarque ? datoEmbarque.descripcion_embarque : '-' }}
