--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -1,4 +1,10 @@
 <div class="m-subheader">
+    <button (click)="onNoticias(noticiaModal)"
+    [disabled]="appService.noticiasSinLeer == 0"
+    class="btn btn-success text-right"
+    style="float:right; top:15px">
+       {{ appService.noticiasSinLeer }} Noticias
+    </button>
     <div class="d-flex align-items-center">
         <div class="mr-auto">
             <h3 class="page-title">
@@ -501,6 +507,49 @@
             </div>
 
         </div>
+    </div>
+</ng-template>
+<!--end::Modal-->
+
+<!--begin::View  Modal-->
+<ng-template #noticiaModal let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title">Noticias</h4>
+    </div>
+    <div class="modal-body">
+        <div class="m-portlet__head-caption">
+            
+            <div class="m-list-settings">
+                <div class="m-dropdown__content">
+                    <div class="m-list-timeline m-list-timeline--skin-light">
+                        <div class="m-list-timeline__items">
+                            <div class="m-list-timeline__item"
+                                 *ngFor="let noticia of appService.noticias">
+                                <span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
+                                <span class="m-list-timeline__text" style="font-size: 1.2rem !important; color:#1e1111 !important">
+                                    {{noticia.fecha}} -- {{noticia.texto}}
+                            </span>
+                               
+                            </div>
+                        </div>
+                    </div>
+                   
+                </div>
+            </div>
+            <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit">
+                        <div class="m-form__actions m-form__actions--solid">
+                            <div class="row mb-10">
+                                <div class="col-lg-12 text-right">
+                                    <button (click)="leidas()"
+                                            class="btn btn-success">
+                                        Leídas
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+
     </div>
 </ng-template>
 <!--end::Modal-->
