--- a/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
+++ b/src/app/theme/pages/default/extras/extras-datatable/extras-datatable.component.html
@@ -11,6 +11,9 @@
         Dirección
       </th>
       <th>
+        Celular
+      </th>
+      <th>
         Cédula
       </th>
       <th>
@@ -31,6 +34,9 @@
       </td>
       <td>
         {{ extra.direccion }}
+      </td>
+      <td>
+        {{ extra.celular ? extra.celular :'-' }}
       </td>
       <td>
         {{ extra.identificacion }}
