--- a/src/app/theme/pages/default/extras/extra-formulario/extra-formulario.component.html
+++ b/src/app/theme/pages/default/extras/extra-formulario/extra-formulario.component.html
@@ -35,6 +35,18 @@
                 </section>
             </div>
             <label class="col-lg-2 col-form-label">
+                Celular:
+            </label>
+            <div class="col-lg-3">
+                <input type="text" class="form-control m-input" placeholder="Teléfono"
+                       [ngModel]="extra.celular" #celular="ngModel" name="celular" required>
+                <section *ngIf="celular.invalid && celular.dirty" class="bs">
+                    <p class="m--font-danger" *ngIf="identificacion.hasError('required')">El celular es requerida</p>
+                </section>
+            </div>
+        </div>
+        <div class="form-group m-form__group row">
+            <label class="col-lg-2 col-form-label">
                 Cédula:
             </label>
             <div class="col-lg-3">
