--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -401,16 +401,13 @@
                     <span>Debe seleccionar Importer porque no coinciden los artículos seleccionados.</span>
                 </div>
                 <div class="row" style="margin: 5px">
-                    <h3>Si desea cambiar los datos del embarque</h3>
+                    <h3>Puede cambiar los datos de embarque sino se tomarán los iniciales por defecto</h3>
                 </div>
                 <form class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed"
                       #embarcarForm="ngForm" (submit)="onSubmitEmbarcar(embarcarForm.value)">
                     <div class="m-portlet__body">
                      
                         <div class="row text-center" style="margin: 5px; padding-top:10px !important;">
-                            <div class="col-lg-12">
-                                <h4>SOLO PARA MIGRANTES.</h4>
-                            </div>
                             </div>
                             <div class="form-group m-form__group row" style="padding-top:10px !important;">
                             <label class="col-lg-3 col-form-label">
@@ -426,7 +423,7 @@
                                 <div class="m-loader m-loader--primary m-loader--right" *ngIf="!usuarios">
                                     <input type="text" class="form-control"/>
                                 </div>
-                                <app-auto-complete *ngIf="usuarios" placeholder="USUARIO REGISTRADO"
+                                <app-auto-complete *ngIf="usuarios" placeholder="SOLO PARA MIGRANTES"
                                                     [(ngModel)]="remitente_usuario" #remitente_id="ngModel"
                                                     name="remitente_id"  [items]="usuarios"
                                                     [textField]="'numero_identidad'"
