--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -72,7 +72,7 @@
         </td>
         <td>
             <span class="m-badge m-badge--info m-badge--wide" title="Declaración de Valores" style="color: white; background-color: #4f9e35"  *ngIf="articulo.factura_file && articulo.facDV && !articulo.consolidadoFactura">Si</span>
-            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura" style="color: white" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
+            <a class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura" style="color: white; background-color: #1e1111" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && !articulo.consolidadoFactura">Si</a>
             <a  class="m-badge m-badge--info m-badge--wide" [attr.href]="url + articulo.factura_file | replice" title="Factura Consolidada" style="color: white; background-color: #4660d1" target="_blank" *ngIf="articulo.factura_file && !articulo.facDV && articulo.consolidadoFactura">Si</a>            
             <span  class="m-badge m-badge--info m-badge--wide" title="Factura Consolidada" style="color: white; background-color: #4660d1"  *ngIf="articulo.factura_file && articulo.facDV && articulo.consolidadoFactura">Si</span>   
             <input
