--- a/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
+++ b/src/app/theme/pages/default/facturaciones/facturaciones-datatable/facturaciones-datatable.component.html
@@ -65,7 +65,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <table class="table table-bordered table-responsive">
+        <table class="table table-bordered table-responsive m-table m-table--head-bg-brand">
             <thead>
             <tr>
                 <th>
