--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -492,7 +492,7 @@
                             Descripción:
                          </label>
                          <div class="col-lg-9">
-                             <input type="text" class="form-control m-input" placeholder="Descripción"
+                             <input type="text" class="form-control m-input" placeholder="Dejar en blanco si es la misma del artículo"
                              [(ngModel)]="descripcionembarque"  #descripcion="ngModel"
                              name="descripcion"
                              > 
