--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -463,6 +463,7 @@
                                                     textField2="apellido"
                                                     valueField="numero_identidad"
                                                     (change)= "validarForm()"
+                                                    [isModal]="true"
                                 ></app-auto-complete>
                             </div>
                          
@@ -484,6 +485,7 @@
                                                     textField2="apellido"
                                                     valueField="numero_identidad"
                                                     (change)= "validarForm()"
+                                                    [isModal]="true"
                                 ></app-auto-complete>
                             </div>
                         </div>
