--- a/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-datatable/en-bodega-datatable.component.html
@@ -65,7 +65,7 @@
             {{articulo.volumen}}
         </td>
         <td>
-            <input class="form-control m-input" type="number" style="float: left; width:100px; margin-right: 5px; padding:7px" *ngIf="!articulo.editarprecio" [(ngModel)]="articulo.precio">
+            <input min="0" class="form-control m-input" type="number" style="float: left; width:100px; margin-right: 5px; padding:7px" *ngIf="!articulo.editarprecio" [(ngModel)]="articulo.precio">
             <span *ngIf="articulo.editarprecio">{{articulo.precio}}</span>
             <i class="fa fa-save m--font-success" title="Actualizar"  style="cursor: pointer; margin-top:10px;"
             (click)="guardarPrecio(articulo.id,articulo.precio)"  *ngIf="!articulo.editarprecio"></i>
