--- a/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
+++ b/src/app/theme/pages/default/mi-casillero/en-bodega-list-header/en-bodega-list-header.component.html
@@ -15,5 +15,11 @@
             <i class="fa fa-dropbox"></i>
             Consolidar
         </button>
+
+        <button class="btn btn-success m-btn m-btn--icon m-btn--air m-btn--custom"
+            (click)="onExportar()" style="font-size: 1.2rem;">
+            <i class="fa fa-file-excel-o"></i>
+            Exportar
+        </button>
     </div>
 </div>
