--- a/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
+++ b/src/app/theme/pages/default/mi-casillero/mi-casillero-lista/mi-casillero-lista.component.html
@@ -125,6 +125,7 @@
                         <app-en-bodega-list-header [totalEnBodega]="enBodegaSeleccion.length" [selection]="enBodegaSeleccion"
                             (consolidar)="onConsolidar()"
                             (embarcar)="onEmbarcar(embarcar)"
+                            (exportar)="onExportar()"
                             [puedeFactura]="puedeFactura"
                             [consolidarPaquete]="consolidarPaquete"
                             [enviarPaquete]="enviarPaquete"
